--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <body>
     <header>
       <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <h2 class="logo">GALERIX</h2>
         <nav>
           <a href="#">Início</a>
-          <a href="#">Séries</a>
-          <a href="#">Filmes</a>
+          <a href="#">Artistas</a>
+          <a href="#">Museus</a>
           <a href="#">Documentários</a>
         </nav>
       </div>
@@ -29,20 +29,28 @@
     <main>
       <div class="imagem-principal">
         <div class="container">
-          <h3 class="titulo">HOUSE OF CARDS</h3>
+          <h3 class="titulo">DREAM OF DALÍ</h3>
           <p class="descricao">
-            Nada pode impedir o político sem escrúpulos Francis Underwood de
-            conquistar Washington. Assista agora a nova temporada!
+            “Archaeological Reminiscence of Millet's ‘Angelus’ ” 360°:
+            Experimente imergir no mundo do mestre surrealista Dalí como nunca
+            antes visto! Aventure-se dentro das torres, avistando terras
+            distantes e descobrindo surpresas por toda parte.
           </p>
           <div class="botoes">
-            <button role="button" class="botao">
-              <i class="fas fa-play"></i>
-              ASSISTIR AGORA
-            </button>
-            <button role="button" class="botao">
-              <i class="fas fa-info-circle"></i>
-              MAIS INFORMAÇÕES
-            </button>
+            <a
+              href="https://www.youtube.com/watch?v=F1eLeIocAcU&ab_channel=TheDal%C3%ADMuseum"
+            >
+              <button role="button" class="botao">
+                <i class="fas fa-play"></i>
+                ASSISTIR AGORA
+              </button>
+            </a>
+            <a href="https://store.steampowered.com/app/591360/Dreams_of_Dali/">
+              <button role="button" class="botao">
+                <i class="fas fa-info-circle"></i>
+                MAIS INFORMAÇÕES
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -51,61 +59,89 @@
     <div class="carousel-fotos">
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini1.jpg"
-            alt="the-umbrella-academy-poster"
-          />
+          <a
+            href="https://www.youtube.com/watch?v=yaI2WBEZ5eI&t=34s&ab_channel=Shaburux"
+          >
+            <img
+              class="box-fotos"
+              src="/img/mini1.jpg"
+              alt="gogh-self-portrait"
+            />
+          </a>
         </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini2.jpg"
-            alt="starwars-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini3.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini4.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini5.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini6.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini7.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
-        <div class="item">
-          <img
-            class="box-fotos"
-            src="/img/mini8.jpg"
-            alt="the-umbrella-academy-poster"
-          />
-        </div>
+        <a
+          href="https://www.youtube.com/watch?v=Mr0rsYTt-qg&ab_channel=JoseVillalba"
+        >
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini2.jpg"
+              alt="girl-window-salvador-dali"
+            />
+          </div>
+        </a>
+        <a
+          href="https://www.youtube.com/watch?v=YOiwfCfxwCU&ab_channel=Artislife"
+        >
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini3.jpg"
+              alt="la-gioconda-da-vinci"
+            />
+          </div>
+        </a>
+        <a
+          href="https://www.youtube.com/watch?v=hav3rX5dFUo&ab_channel=UniFrance"
+        >
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini4.jpg"
+              alt="the-scream-edvard-munch"
+            />
+          </div>
+        </a>
+        <a
+          href="https://www.youtube.com/watch?v=G7Dt9ziemYA&ab_channel=VRMotionMagic"
+        >
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini5.jpg"
+              alt="stary-night-gogh"
+            />
+          </div>
+        </a>
+        <a href="https://www.dailymotion.com/video/x6gqu51">
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini6.jpg"
+              alt="las-meninas-velazquez"
+            />
+          </div>
+        </a>
+        <a
+          href="https://www.youtube.com/watch?v=VsqXp3UIq_o&ab_channel=mjkooopman"
+        >
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini7.jpg"
+              alt="persistence-memory"
+            />
+          </div>
+        </a>
+        <a href="https://vimeo.com/423349549">
+          <div class="item">
+            <img
+              class="box-fotos"
+              src="/img/mini8.jpg"
+              alt="woman-parasol-monet"
+            />
+          </div>
+        </a>
       </div>
     </div>
 
