--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           </p>
           <div class="botoes">
             <a
+              target="_blank"
               href="https://www.youtube.com/watch?v=F1eLeIocAcU&ab_channel=TheDal%C3%ADMuseum"
             >
               <button role="button" class="botao">
@@ -45,7 +46,10 @@
                 ASSISTIR AGORA
               </button>
             </a>
-            <a href="https://store.steampowered.com/app/591360/Dreams_of_Dali/">
+            <a
+              target="_blank"
+              href="https://store.steampowered.com/app/591360/Dreams_of_Dali/"
+            >
               <button role="button" class="botao">
                 <i class="fas fa-info-circle"></i>
                 MAIS INFORMAÇÕES
@@ -60,6 +64,7 @@
       <div class="owl-carousel owl-theme">
         <div class="item">
           <a
+            target="_blank"
             href="https://www.youtube.com/watch?v=yaI2WBEZ5eI&t=34s&ab_channel=Shaburux"
           >
             <img
@@ -70,6 +75,7 @@
           </a>
         </div>
         <a
+          target="_blank"
           href="https://www.youtube.com/watch?v=Mr0rsYTt-qg&ab_channel=JoseVillalba"
         >
           <div class="item">
@@ -81,6 +87,7 @@
           </div>
         </a>
         <a
+          target="_blank"
           href="https://www.youtube.com/watch?v=YOiwfCfxwCU&ab_channel=Artislife"
         >
           <div class="item">
@@ -92,6 +99,7 @@
           </div>
         </a>
         <a
+          target="_blank"
           href="https://www.youtube.com/watch?v=hav3rX5dFUo&ab_channel=UniFrance"
         >
           <div class="item">
@@ -103,6 +111,7 @@
           </div>
         </a>
         <a
+          target="_blank"
           href="https://www.youtube.com/watch?v=G7Dt9ziemYA&ab_channel=VRMotionMagic"
         >
           <div class="item">
@@ -113,7 +122,10 @@
             />
           </div>
         </a>
-        <a href="https://www.dailymotion.com/video/x6gqu51">
+        <a 
+          target="_blank" 
+          href="https://www.dailymotion.com/video/x6gqu51"
+        >
           <div class="item">
             <img
               class="box-fotos"
@@ -123,6 +135,7 @@
           </div>
         </a>
         <a
+          target="_blank"
           href="https://www.youtube.com/watch?v=VsqXp3UIq_o&ab_channel=mjkooopman"
         >
           <div class="item">
@@ -133,7 +146,10 @@
             />
           </div>
         </a>
-        <a href="https://vimeo.com/423349549">
+        <a 
+          target="_blank" 
+          href="https://vimeo.com/423349549"
+        >
           <div class="item">
             <img
               class="box-fotos"
